Fix SVG icons in dark mode

--- a/assets/stylesheets/pages/_landing.scss
+++ b/assets/stylesheets/pages/_landing.scss
@@ -14,6 +14,7 @@
     height: 48px;
     width: 48px;
     object-fit: contain;
+    filter: var(--icon-filter);
   }
 
   h3 {
